autopickr and autocomplete collision
used some of same files but different parameters

--- a/app/views/ofxes/show.html.slim
+++ b/app/views/ofxes/show.html.slim
@@ -11,7 +11,7 @@
             p If your recongnize the Entry as a reapeating Entry, search for a matching name in the following search field and click the Duplicate Match button and it will duplicate a new Entry with the information from the bank statement. You can then save the Entry if it validates. You can also Cancel the Entry if you picked the wrong match.
             div.w3-left[
               data-controller="autocomplete" 
-              data-autocomplete-url="/entries/auto_search" 
+              data-autocomplete-url="/entries/autocomplete_search" 
               data-autocomplete-min-length="2"
               ]
               input[type="text" 
