correct ledger starting balance
     # been wrong for a long time. Below is what once starting_balance_on
      # if transasction on 1st day, beginning was wrong
      @balance = balance_on(@bom - 1.day)

--- a/app/assets/stylesheets/accounts.scss
+++ b/app/assets/stylesheets/accounts.scss
@@ -90,13 +90,8 @@ table.gl-table {
     &.p5{ padding-left: 5rem;}
   }
 }
-
-.snowSelectedBackground,
-.snowSelectedBackground:nth-of-type(even),
-.snowSelectedBackground:nth-of-type(odd){
-  background-color:#F9F9F9;
-}
-tbody.split-rows {display:none}
+// split rows are intialy hidden if more that 2 splits
+tbody.split-rows {display:none} 
 
 
 .pl-row {
