--- a/app/views/welcome/book.html.slim
+++ b/app/views/welcome/book.html.slim
@@ -1,7 +1,7 @@
 / .w3-container.min-height
 .w3-row.min-height[style="background-color:#ffffdd"]
   .w3-twothird.w3-padding
-    h2 Welcome to RBooks
+    h2.text-lg.font-bold Welcome to RBooks
     .form-fields
       .field
         label Current Book
