--- a/app/views/about/accounts.html.slim
+++ b/app/views/about/accounts.html.slim
@@ -22,7 +22,7 @@
         .w3-col.s4
           h4.strong Features
           p As in the abbreviated view, clicking on the account name link will open an Account Ledger. Most attributes for Account are displayed in the table. Those are described in the About Edit Page.
-          ul
+          ul.list-disk
             li Clicking on the account name or the  <i class="fas fa-eye"></i> icon will open the Account Ledger (show).
             li Clicking on the <i class="fas fa-edit"></i> will open the Edit form for the Account.
             li Clicking on the <i class="fas fa-plus-square"></i> will open the a New form for a new Account. There is not a direct 'Create' action. The new action will only create a new account that will be the child of the parent account selected.
@@ -50,7 +50,7 @@
           h4.strong Tree Structure
           p The RCash account table can be thought of as an Ancestry tree. Trees have a trunk or root. Trunks can have Branches or Children. Branches can have other Branches. A Branch that does not have other branches can have leaves. Leaves belong to one branch. In RCash only leaves can have transactions or Entries.
           p If you look back at the abbreviated account list
-          ul
+          ul.list-disk
             li Assets belong to the Root account and has two children. Current Assets has three children. 
             li Each Placeholder (has Children) can have a Family, which is just all of its children and their children until a child has no children. The Root account has a large family (all accounts!). Checking has a family that is only it's children. Current Assets is one level up from Checking and has a big family.
           p 
@@ -63,7 +63,7 @@
             = image_tag('ledger.png',class:'image-fit')
           h5.strong Filters
           p There are two forms of an Account ledger for PDF version, Abbreviated or Split
-          ul
+          ul.list-disk
             li The Abbreviated ledger only displays one Account transfer. If there is more than one transfer, the account transfer will be '--Split Transaction--'. Clicking on that will show all transfer for that entry.
             li The split ledger show all transfers.
           p <strong>Date Picker - </strong> Ledgers display Entries by a date range (from..to). There are a number of ways to set that range.
@@ -76,7 +76,7 @@
                 .s7.w3-col.entry-select= to_period_select
                 .s5.w3-col= text_field_tag :to_date, nil,data:{controller:'flatpickr',rangepicker_target:'to_date'},placeholder:'Pick To Date'
 
-          ul
+          ul.list-disk
             li The Filter Date Picker has pull downs to select the From and To period. Periods are, months, quarters and years (current and previous). Selecting a From period will set the To period, but you can change the selection. Periods selected populate the Date text field.
             li The Date Picker text field allows you to enter any From and To Date
             li The Register and Split Register pull downs (HTML or PDF) can use the date picker dates
@@ -85,7 +85,7 @@
           
         .w3-col.s4
           h4.strong Features
-          ul
+          ul.list-disk
             li You can add a New Entry for an account from this page, unless the account is a placeholder
             li You can add or remove (toggle) the account to the Recent Ledgers link buttons in the Menu Bar
             li Click on Show/Hide Summary/Filers will open the summary area that displays a summary of the accounts family. You can use the name link in the summary to open one of the children's ledger.
@@ -98,7 +98,7 @@
 
         .w3-col.s4
           h5.strong Ledger Links
-          ul
+          ul.list-disk
             li 
               strong Date(Edit) Link. 
               |Clicking on the date will open the Split Entry Ledger
