easier ul for issue

--- a/app/views/about/about.html.slim
+++ b/app/views/about/about.html.slim
@@ -34,7 +34,7 @@
 
         .w3-col.s6
           h5.strong Flow
-          ul
+          ul.list-disk
             li Click Login in tile bar
             li Click Account in title bar to list accounts
             li Click on Account name to open a ledger
