tw cleanup in about, report picker

--- a/app/views/about/about.html.slim
+++ b/app/views/about/about.html.slim
@@ -1,13 +1,13 @@
 #about.w3-container.w3-white.min-height
-  .w3-row.about
+  .w3-row.about.leading-tight
     .w3-col.s9
       h5.strong About RCash
-      p RCash is a Web based double entry accounting application.
+      p.m-1 RCash is a Web based double entry accounting application.
 
-      p The about link buttons to the right will provide some detail on the the areas listed. This page is just an overview of the look, feel and flow of the application.
+      p.m-1 The about link buttons to the right will provide some detail on the the areas listed. This page is just an overview of the look, feel and flow of the application.
       .w3-row.w3-row-padding
         .w3-col.s6
-          p <strong>Buttons, Buttons, Buttons</strong> There are many, maybe too many! Almost all links use Buttons or Icons instead of an Anchors (the blue words on most web sites)
+          p.m-1 <strong>Buttons, Buttons, Buttons</strong> There are many, maybe too many! Almost all links use Buttons or Icons instead of an Anchors (the blue words on most web sites)
           
           div
             button.lime-link-button Lime Link Button
@@ -20,7 +20,7 @@
             form
               = submit_tag 'Submit Button'
           h5.strong icons
-          ul
+          ul.classic.ml-1
             li <i class="fas fa-edit"></i> - Edit
             li <i class="fas fa-eye"></i> - Show
             li <i class="fas fa-plus-square"></i> - Add/New
@@ -34,7 +34,7 @@
 
         .w3-col.s6
           h5.strong Flow
-          ul.list-disk
+          ul.classic.ml-4
             li Click Login in tile bar
             li Click Account in title bar to list accounts
             li Click on Account name to open a ledger
