--- a/app/views/about/reports.html.slim
+++ b/app/views/about/reports.html.slim
@@ -6,7 +6,7 @@
       = image_tag('reports.png',class:'image-fit')
       .w3-row.
         .w3-col.s10
-          p Under Construction. There are a few out there
+          p.m-1Under Construction. There are a few out there
 
     .w3-col.s2
       h5.strong About Reports
