--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -200,3 +200,8 @@ input, text, textarea {
   border-style: solid;
   border-width: 1px;
 }
+
+ul, ul.slim, ul.classic {
+  list-style-type: disc;
+  padding-left: 1rem;
+}
