--- a/app/views/welcome/home.html.slim
+++ b/app/views/welcome/home.html.slim
@@ -32,4 +32,5 @@ div[style="background-color:#ffffdd"]
         li Requires some Technical skills to setup and maintain.
         li ?
       .annotate Rails Version 6.1.3
-      .annotate Updated: 2021/12/01
+      - appdir = Rails.root.join("app")
+      .annotate = "Updated: #{File.mtime(appdir)}"
